--- a/src/main/webapp/pages/base/handleImg.html
+++ b/src/main/webapp/pages/base/handleImg.html
@@ -32,7 +32,7 @@
 			bgOpacity: 0.6,
 			aspectRatio: 1,
 			onChange: function(img) {
-				
+				console.log(img);
 			},
 			function() {
 				img = this;
